* DOMDocument wrapper introduced (alpha)    * fixed appends    * added XML/XHTML compatibility    * contentType support  * phpQuery   ::newDocument($markup, $contentType = null)  // new document from markup, type autodetected   ::newDocumentHTML($html)  // new document, type HTML   ::newDocumentXML($xml)  // new document, type XML   ::newDocumentXHTML($xml)  // new document, type XHTML   ::newDocumentFile($file)   ::newDocumentFileHTML($file)   ::newDocumentFileXML($file)   ::newDocumentFileXHTML($file)  * $pq   ->isXML()   ->isXHTML()   ->isHTML()   ->html()   ->xml()   ->htmlOuter()   ->xmlOuter()  * new test documents  * class reorganization
task 23: XML, XHTML compatibility
http://code.google.com/p/phpquery/issues/detail?id=23

--- a/branches/dev/test-cases/document-types/document-iso88592-nocharset.xhtml
+++ b/branches/dev/test-cases/document-types/document-iso88592-nocharset.xhtml
@@ -1,12 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
 	"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <!--	"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">-->
  <head>
- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <title>XHTML 1.0 Example</title>
  <script type="text/javascript">
  <!--//--><![CDATA[//><!--
@@ -17,7 +14,8 @@
  </script>
  </head>
  <body onload="loadpdf()">
- <p>This is an example of an &nbsp;
+ <p>Test: &nbsp; ¿¼æ</p>
+ <p>This is an example of an
  <abbr title="Extensible HyperText Markup Language">XHTML</abbr> 1.0 Strict document.<br />
  <img id="validation-icon"
    src="http://www.w3.org/Icons/valid-xhtml10"
